# hex-play

./: .editorconfig  .envrc  .gitignore  .justfile  .markdownlint.yaml  .renovaterc.json5  .sops.yaml  CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md  config.sops.env  deny.toml  rustfmt.toml  tailwind.config.js
.claude/: CLAUDE.md  Dioxus.md  settings.json
.config/: cliff.toml  clippy.toml  mise.toml
.github/workflows/: renovate.yaml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: hex-play.proto  system.proto  user.proto
crates/api/src/: error.rs  grpc.rs  http.rs  lib.rs
crates/api/src/grpc/: error.rs  system.rs  user.rs
crates/api/src/http/: error.rs  user.rs
crates/cli/: Cargo.toml  cargo.toml
crates/cli/src/: args.rs  commands.rs  config.rs  lib.rs  logging.rs  main.rs
crates/cli/src/commands/: server.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  models.rs  repositories.rs  repository.rs  services.rs  test_support.rs  use_cases.rs
crates/core/src/models/: newtypes.rs  session.rs  user.rs  user_info.rs
crates/core/src/repositories/: session.rs  user.rs  user_info.rs
crates/core/src/services/: core.rs  repository.rs  session.rs  user.rs  user_info.rs
crates/core/src/session/: mod.rs  repository.rs  service.rs  test_support.rs
crates/core/src/use_cases/: user.rs
crates/core/src/use_cases/user/: sample.rs
crates/core/src/user/: mod.rs  model.rs  repository.rs  service.rs  test_support.rs
crates/database/: Cargo.toml
crates/database/migrations/: configuration.json
crates/database/migrations/down/: 0002_users.sql  0003_user_info.sql
crates/database/migrations/up/: 0001_setup.sql  0002_users.sql  0003_user_info.sql
crates/database/src/: adapters.rs  error.rs  lib.rs  migration.rs  repository.rs  transaction.rs
crates/database/src/adapters/: session.rs  user.rs  user_info.rs
crates/database/src/entities/: mod.rs  prelude.rs  sessions.rs  user_info.rs  users.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: error.rs  lib.rs  user.rs
crates/frontend/src/components/: app_layout.rs  book_table.rs  detail_panel.rs  mod.rs  nav_bar.rs  tree_explorer.rs
crates/frontend/src/routes/: books_page.rs  home.rs  mod.rs
crates/integration-tests/: Cargo.toml  context.rs  main.rs  mysql.rs  postgres.rs  sqlite.rs  user.rs
crates/utils/: Cargo.toml
crates/utils/src/: token.rs
