cargo-features = []

[workspace]
resolver = "3"
members = ["crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A Rust playground for experimentation"
readme = "README.md"
repository = "https://github.com/szinn/hex-play"
license = "MIT"

[workspace.dependencies]
hex-play-database = { path = "crates/database" }

anyhow = "1.0.100"
async-trait = "0.1.89"
config = "0.15.19"
log = "0.4.29"
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing-log = "0.2.0"

[workspace.dependencies.clap]
version = "4.5.54"
features = ["cargo", "derive", "env"]

[workspace.dependencies.insta]
version = "1.46.1"
features = ["filters"]

[workspace.dependencies.rust-embed]
version = "8.11.0"
features = ["debug-embed"]

[workspace.dependencies.sea-orm]
version = "2.0.0-rc.28"
features = [
    "debug-print",
    "mock",
    "postgres-array",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-uuid",
]

[workspace.dependencies.sea-orm-migration]
version = "2.0.0-rc.28"
features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-chrono",
    "with-json",
    "with-uuid",
]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["full"]

[workspace.dependencies.tracing]
version = "0.1.44"
features = ["log"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.22"
features = ["std", "fmt", "registry", "env-filter", "json"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
cast_lossless = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
needless_for_each = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unused_trait_names = "warn"
use_self = "warn"
useless_conversion = "warn"

[profile.dev.package]
# Insta suggests compiling these packages in opt mode for faster testing.
# See https://docs.rs/insta/latest/insta/#optional-faster-runs.
insta.opt-level = 3
similar.opt-level = 3
# Proptest suggests compiling itself and its RNG in opt mode as well.
# See https://proptest-rs.github.io/proptest/proptest/tips-and-best-practices.html#setting-opt-level
# proptest.opt-level = 3
# proptest-state-machine.opt-level = 3
# rand_chacha.opt-level = 3

[profile.release]
strip = "debuginfo"
codegen-units = 1
