[package]
name = "hex-play-api"
description = "API for experimentation"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

build = "build.rs"

[dependencies]
hex-play-core.workspace = true

async-trait.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
hex-play-core = { workspace = true, features = ["test-support"] }

[build-dependencies]
tonic-prost-build.workspace = true
