[package]
name = "hex-play-cli"
description = "Command-line app for experimentation"
default-run = "hex-play"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "hex_play"
path = "src/lib.rs"

[[bin]]
name = "hex-play"
path = "src/bin/hex-play.rs"

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"

[dependencies]
hex-play-core.workspace = true
hex-play-database.workspace = true

anyhow.workspace = true
clap.workspace = true
config.workspace = true
log.workspace = true
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-graceful-shutdown.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
