[package]
name = "hex-play-cli"
description = "Command-line app for experimentation"
default-run = "hex-play"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
name = "hex_play"
path = "src/lib.rs"

[[bin]]
name = "hex-play"
path = "src/bin/hex-play.rs"

[features]
cli = [
    "dep:hex-play-api",
    "dep:hex-play-core",
    "dep:hex-play-database",
    "dep:hex-play-frontend",
    "dep:anyhow",
    "dep:clap",
    "dep:config",
    "dep:dioxus",
    "dep:log",
    "dep:sea-orm",
    "dep:serde",
    "dep:thiserror",
    "dep:tokio",
    "dep:tokio-graceful-shutdown",
    "dep:tracing",
    "dep:tracing-log",
    "dep:tracing-subscriber",
]
web = ["dioxus/web", "dep:hex-play-frontend", "hex-play-frontend?/web"]
server = ["dioxus/server", "cli", "hex-play-frontend?/server"]

[dependencies]
hex-play-api = { workspace = true, optional = true }
hex-play-core = { workspace = true, optional = true }
hex-play-database = { workspace = true, optional = true }
hex-play-frontend = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
config = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true }
log = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-graceful-shutdown = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
insta.workspace = true
