[package]
name = "hex-play-core"
description = "Core/domain for experimentation"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
hex-play-database.workspace = true

async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
