[package]
name = "hex-play-core"
description = "Core/domain for experimentation"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
test-support = []

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derive_builder.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
