[package]
name = "hex-play-database"
description = "Database for experimentation"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
hex-play-core.workspace = true

async-trait.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
hex-play-core = { workspace = true, features = ["test-support"] }
tokio.workspace = true
