[package]
name = "hex-play-frontend"
description = "Frontend for experimentation"
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
dioxus.workspace = true

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
chrono = { workspace = true }
hex-play-core = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]

[features]
web = ["dioxus/web"]
server = [
    "dep:anyhow",
    "dep:async-trait",
    "dep:axum",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:hex-play-core",
    "dep:thiserror",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dioxus/server",
]
