[package]
name = "hex-play-integration-tests"
description = "Integration tests for experimentation"
publish = false
autotests = false

version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[test]]
name = "integration"
path = "main.rs"

[features]
default = ["postgres"]
postgres = ["dep:testcontainers", "dep:testcontainers-modules"]
sqlite = []
mysql = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
hex-play-core = { workspace = true, features = ["test-support"] }
hex-play-database.workspace = true
sea-orm.workspace = true
tokio.workspace = true

[dependencies.testcontainers]
workspace = true
optional = true

[dependencies.testcontainers-modules]
workspace = true
optional = true

[lints]
workspace = true
